--- a/mobile/css/style.css
+++ b/mobile/css/style.css
@@ -1,6 +1,6 @@
 @font-face {
   font-family: 'Almalik';
-  src: url('../fonts/Almalik.ttf') format('truetype');
+  src: url('../../fonts/Almalik.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
@@ -22,9 +22,11 @@ body {
 /* CONTENITORE MENU */
 .menu-container {
   display: flex;
+  white-space: nowrap;
   align-items: center;          /* centra verticalmente */
   justify-content: space-between; /* hamburger a sinistra, link a destra */
   width: 100%;                  /* prende tutta la larghezza */
   gap: 20px;                    /* spazio opzionale tra elementi */
   position: relative;
 }
+
