--- a/mobile/css/top.css
+++ b/mobile/css/top.css
@@ -35,6 +35,7 @@
 
 .extra-links {
   justify-content: space-evenly;
+  align-items: center; /* centra il testo verticalmente */
   display: flex; /* flexbox */
   flex: 1; /* prende tutto lo spazio */
   gap: 10px; /* distanza tra link */
@@ -57,6 +58,7 @@
   flex: 1;             /* ogni link prende lo stesso spazio */
   text-align: center;  /* centra il testo nel suo “blocco” */
 }
+
 
 
 
