--- a/mobile/css/containers.css
+++ b/mobile/css/containers.css
@@ -62,10 +62,12 @@
 }
 
 .hoverContent2 a {
+  font-size: clamp(14px, 2.5vw, 18px); /* min 14px, proporzionale, max 18px */
   display: block;
   color: #EFAF9F;
   text-decoration: none;
   padding: 6px 0;
+  white-space: nowrap;      /* impedisce che il testo vada a capo */
 }
 
 .hoverContent2 a:hover {
@@ -78,4 +80,5 @@
   left: 0; /* porta il menu in vista */
 
 }
+
 
