--- a/css/containers.css
+++ b/css/containers.css
@@ -28,6 +28,7 @@
       width: 100%;
       height: 100%;
       margin: 0;
+      z-index: 11;
     }
     
     .hoverContent {
@@ -36,6 +37,7 @@
       width: 100%;
       height: 100%;
       margin: 0; 
+      z-index: 9999;
     }
 
     .hoverContainer2 {
