--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
 }
 @font-face {
   font-family: 'Arabiantext';
-  src: url('../fonts/Arabian\ Knight.otf') format('truetype');
+  src: url('../fonts/Yuzarsif-Regular.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
