--- a/mobile/css/style.css
+++ b/mobile/css/style.css
@@ -14,6 +14,12 @@
   font-weight: normal;
   font-style: normal;
 }
+@font-face {
+  font-family: 'Arabiantext';
+  src: url('../../fonts/Yuzarsif-Regular.ttf') format('truetype');
+  font-weight: normal;
+  font-style: normal;
+}
 
 /* ===============================
    VARIABILI CSS
